--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -15,7 +15,6 @@
         <nav></nav>
       </div>
     </header>
-
     <main>
       <h1>Homepage</h1>
 
@@ -74,11 +73,11 @@
           </header>
           <div>
             <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           </div>
         </div>
       </section>
@@ -93,62 +92,11 @@
             <article>
               <p>Career</p>
               <h3>Hoc loco tenere se Triarius non potuit.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
             <article>
               <p>Digital Life</p>
               <h3>Ut alios omittam, hunc appello.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
-            <article>
-              <p>Social</p>
-              <h3>Bestiarum vero nullum iudicium puto.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-          </div>
-        </div>
-      </section>
-      
-
-      <!-- Testimonials Section -->
-      <section>
-        <div>
-          <header>
-            <h2>Testimonials</h2>
-            <p>We are more than a digital company</p>
-          </header>
-          <div>
-            <article>
-              <h3>Testimonial 1</h3>
-            </article>
-            <article>
-              <h3>Testimonial 2</h3>
-            </article>
-            <article>
-              <h3>Testimonial 3</h3>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- Contact Section -->
-      <section>
-        <div>
-          <header>
-            <h2>Contact</h2>
-            <p>We like to know new people</p>
-          </header>
-          <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div>
-        Footer
-      </div>
-    </footer>
-  </body>
-</html>
+            <articl
