--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -12,7 +12,6 @@
 
 <body>
     <!-- Header -->
-    <br>
     <div>
         <header>
             <div>
@@ -23,12 +22,10 @@
     </div>
 
     <!-- Main -->
-    <br>
     <main>
         <h1>Homepage</h1>
 
         <!-- Hero section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -38,7 +35,6 @@
         </div>
 
         <!-- Services section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -59,7 +55,6 @@
         </div>
 
         <!-- Works section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -83,7 +78,6 @@
         </div>
 
         <!-- About Us section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -104,7 +98,6 @@
         </div>
 
         <!-- Latest news section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -133,7 +126,6 @@
         </div>
 
         <!-- Testimonials section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -151,7 +143,6 @@
         </div>
 
         <!-- Contact section -->
-        <br>
         <div>
             <section>
                 <div>
@@ -167,15 +158,4 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <br>
-    <div>
-        <footer>
-            <div>
-                Footer
-            </div>
-        </footer>
-    </div>
-</body>
-
-</html>
+    <!-- Footer 
