--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -108,17 +108,17 @@
                         <article>
                             <p>Career</p>
                             <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                            <p>Lorem ipsum dolor sit amet...</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                         </article>
                         <article>
                             <p>Digital Life</p>
                             <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                            <p>Lorem ipsum dolor sit amet...</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                         </article>
                         <article>
                             <p>Social</p>
                             <h3>Bestiarum vero nullum iudicium puto.</h3>
-                            <p>Lorem ipsum dolor sit amet...</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                         </article>
                     </div>
                 </div>
@@ -151,11 +151,21 @@
                         <p>We like to know new people</p>
                     </header>
                     <div>
-                        <p>Lorem ipsum dolor sit amet...</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                     </div>
                 </div>
             </section>
         </div>
     </main>
 
-    <!-- Footer 
+    <!-- Footer -->
+    <div>
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
+    </div>
+</body>
+
+</html>
